examples/test/testpolicy4028.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4028
  namespace: namespace369
spec:
  podSelector:
    matchLabels:
      key45: value38
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key17: value33
          key42: value16
          key14: value41
      podSelector:
        matchLabels:
          key43: value8
          key45: value23
          key39: value30
